# scalc

./: .gitignore  CMakeLists.txt  build.bat  build.sh  main.cc
lexers/: ast.cc  lexer_numlit.cc  lexer_numlit.re  lexer_operators.cc  lexer_operators.re  lexer_tokens.cc  lexer_tokens.re  lexers.h  statement_machine.cc  statement_machine.h
lexers/ast_nodes/: bioperator.cc  bioperator.h  number.cc  number.h  statement.cc  statement.h  symbol.cc  symbol.h
lexers/tests/: test_ast.cc  test_eval.cc  test_lexer_expressions.cc  test_lexer_numbers.cc  test_lexer_operators.cc  test_statement_machine.cc
